# smart_greenhouse

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.txt
backend/: CMakeLists.txt  Dockerfile  conanfile.txt
backend/config/: config.json  config.yaml
backend/include/controllers/: AuthController.hpp  ComponentController.hpp  RuleController.hpp  UserController.hpp
backend/include/db/managers/: ComponentManager.hpp
backend/include/entities/: Greenhouse.hpp  Rule.hpp  User.hpp
backend/include/mqtt_client/: MQTTClient.hpp
backend/include/plugins/: DbPlugin.hpp  JwtPlugin.hpp
backend/include/processor/: ServerProcessor.hpp
backend/include/utils/: Logger.hpp  PasswordHasher.hpp
backend/scripts/: build.sh  setup_mosquitto.sh
backend/src/controllers/: ComponentController.cpp  GreenhouseController.cpp  UserController.cpp
backend/src/db/: Database.cpp
backend/src/db/managers/: ComponentManager.cpp
backend/src/mqtt_client/: MQTTClient.cpp
backend/src/plugins/: DbPlugin.cpp
backend/src/processor/: ServerProcessor.cpp
backend/src/utils/: AuthUtils.cpp  PasswordHasher.cpp
config/: config.json  config.yaml
data/: greenhouse.db  greenhouse.db-shm  greenhouse.db-wal
frontend/: .dockerignore  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: fetcher.ts
frontend/src/components/: Navbar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AdminPage.tsx  DashboardPage.tsx  LoginPage.tsx
frontend/src/pages/AdminPage/: AdminPage.tsx  ComponentPage.tsx  GreenhouseTable.tsx  RuleTable.tsx  UsersTable.tsx
frontend/src/routes/: PrivateRoute.tsx
frontend/src/styles/: globals.css
include/api/: BaseController.hpp  ComponentController.hpp  GreenhouseController.hpp  MetricController.hpp  RestServer.hpp  RuleController.hpp  UserController.hpp  base_controller.hpp  greenhouse_controller.hpp
include/config/: ConfigLoader.hpp  Logger.hpp
include/controllers/: AuthController.hpp  AuthCtrl.hpp  ComponentController.hpp  GreenhouseController.hpp  MetricController.hpp  RuleController.hpp  UserController.hpp
include/db/: Database.hpp  SQLiteStatement.hpp  SchemaLoader.hpp
include/db/managers/: ComponentManager.hpp  GreenhouseManager.hpp  MetricManager.hpp  RuleManager.hpp  UserManager.hpp
include/entities/: Component.hpp  Greenhouse.hpp  Metric.hpp  Rule.hpp  User.hpp
include/filters/: CorsFilter.h  JwtAuth.hpp  JwtAuthFilter.hpp
include/mqtt_client/: MQTTClient.hpp
include/plugins/: DbPlugin.hpp  JwtPlugin.hpp
include/processor/: ServerProcessor.hpp
include/utils/: AuthUtils.hpp  PasswordHasher.hpp  TimeParserISO8601.hpp
mosquitto/: Dockerfile
mosquitto/config/: mosquitto.conf
scripts/: build.sh  rebuild.sh
src/: main.cpp
src/api/: BaseController.cpp  ComponentController.cpp  GreenhouseController.cpp  MetricController.cpp  RestServer.cpp  RuleController.cpp  UserController.cpp
src/config/: ConfigLoader.cpp
src/controllers/: AuthController.cpp  AuthCtrl.cpp  ComponentController.cpp  GreenhouseController.cpp  MetricController.cpp  RuleController.cpp  UserController.cpp
src/db/: Database.cpp  SQLiteStatemetn.cpp  SchemaLoader.cpp
src/db/managers/: ComponentManager.cpp  GreenhouseManager.cpp  MetricManager.cpp  RuleManager.cpp  UserManager.cpp
src/filters/: JwtAuth.cpp  JwtAuthFilter.cpp
src/mqtt_client/: MQTTClient.cpp
src/plugins/: DbPlugin.cpp  JwtPlugin.cpp
src/processor/: ServerProcessor.cpp
src/utils/: AuthUtils.cpp  PasswordHasher.cpp
